tests/paczka1/small_fuzzy/86640525.err
Error in line 7: A401 S600 81,2
Error in line 11: A401 S994 78,0
